cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(JoinRoads)
set(AUTHOR "Ilya Zverev <ilya@zverev.info>")
find_package(Osmium COMPONENTS io)
include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS})
add_definitions(${OSMIUM_WARNING_OPTIONS})

if(NOT USE_CPP_VERSION)
  set(USE_CPP_VERSION c++11)
endif()
message(STATUS "Use C++ version: ${USE_CPP_VERSION}")
add_definitions(-std=${USE_CPP_VERSION})
set(USUAL_COMPILE_OPTIONS "-O3 -g")

add_executable(join_roads src/join_roads.cpp)
target_link_libraries(join_roads ${OSMIUM_IO_LIBRARIES})
install(TARGETS join_roads DESTINATION bin)
